--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint": "^5.5.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
+    "gulp-file": "^0.4.0",
+    "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "mongoose": "^5.2.12",
